# music-time

./: .gitignore  CLAUDE.md  CONCEPTS.md  FUTURE_FIXES.md  HISTORY.md  VISUALIZATIONS.md  pyproject.toml
gdtimings/: __init__.py  __main__.py  analyze.py  archive_org.py  cache.py  cli.py  config.py  db.py  http_utils.py  location.py  musicbrainz.py  normalize.py  wikipedia.py
phishtimings/: __init__.py  __main__.py  analyze.py  cli.py  config.py  db.py  livephish.py  musicbrainz.py  normalize.py  phishin.py
tests/: conftest.py  test_analyze.py  test_cache.py  test_location.py  test_musicbrainz.py  test_normalize.py  test_parse.py  test_phish_livephish.py  test_phish_musicbrainz.py  test_phish_normalize.py  test_phish_phishin.py
viz/: __main__.py  band_config.py  curves.py  examples.py  tile_gallery.py
