[project]
name = "gdtimings"
version = "0.1.0"
description = "Grateful Dead Song Timings Database"
requires-python = ">=3.12"
dependencies = [
    "requests",
]

[project.scripts]
gdtimings = "gdtimings.cli:main"

[project.optional-dependencies]
viz = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
]
dev = [
    "pytest>=8.0",
]
